<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backgroundcolor">

    <ImageView
        android:id="@+id/ID_MPP_coverAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/mpp_contDescriptor_AlbumCoverImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#A6FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ID_MPP_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/mpp_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ID_MPP_band"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/mpp_band"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ID_MPP_seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ID_MPP_backwardButton"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="64dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:background="@drawable/round_button"
            android:contentDescription="@string/mpp_contDescriptor_backwardButton"
            android:scaleType="fitXY"
            android:src="@drawable/backward"/>

        <ImageButton
            android:id="@+id/ID_MPP_playpauseButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"

            android:contentDescription="@string/mpp_contDescriptor_playpauseButton"
            android:scaleType="fitXY"
            android:src="@drawable/play"/>

        <ImageButton
            android:id="@+id/ID_MPP_forwardButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:background="@drawable/round_button"
            android:contentDescription="@string/mpp_contDescriptor_forwardButton"
            android:scaleType="fitXY"
            android:src="@drawable/foward"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/ID_MPP_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ID_MPP_coverAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>