<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backgroundcolor">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#A6FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ID_SpecP_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/specP_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ID_SpecP_band"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/specP_band"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/ID_SpecP_frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.example.ale.mediaspectrumplayer.SpectrumView.Visualizer.VisualizerView
            android:id="@+id/ID_SpecP_visualizerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ID_SpecP_seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ID_SpecP_previousButton"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="64dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:background="@drawable/round_button"
            android:contentDescription="@string/mpp_contDescriptor_backwardButton"
            android:scaleType="fitXY"
            android:src="@drawable/previous"/>

        <ImageButton
            android:id="@+id/ID_SpecP_playPauseButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"

            android:contentDescription="@string/mpp_contDescriptor_playpauseButton"
            android:scaleType="fitXY"
            android:src="@drawable/stop"/>

        <ImageButton
            android:id="@+id/ID_SpecP_skipButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:background="@drawable/round_button"
            android:contentDescription="@string/mpp_contDescriptor_forwardButton"
            android:scaleType="fitXY"
            android:src="@drawable/skip"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/ID_SpecP_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>